[project]
name = "agentic-content-moderation"
version = "0.1.0"
description = "Content moderation agent using OpenAI function calling with ReAct reasoning loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
